--- a/src/includes/shared/_list-helpers.scss
+++ b/src/includes/shared/_list-helpers.scss
@@ -2,6 +2,18 @@
  * List helpers
  */
 
+.none {
+  list-style-type: none;
+  padding: 0 0 0 $type-scale-1;
+
+  ul:not(.none),
+  ol:not(.none) {
+    li {
+      text-indent: 0;
+    }
+  }
+}
+
 .upper-roman {
   list-style-type: upper-roman;
 }
@@ -42,8 +54,8 @@
   list-style-type: square;
 }
 
-ol:not(.list) li {
-  padding-left: 0.25rem;
+ol:not(.none) li {
+  padding-left: $spacing-extra-small;
 }
 
 // parenthetical style list indicators
