--- a/src/includes/shared/_text-block.scss
+++ b/src/includes/shared/_text-block.scss
@@ -3,7 +3,7 @@
  */
 
 .br-before {
-  padding: 1.3em 0 0 0;
+  padding: $spacing-medium 0 0 0;
 }
 
 .center {
@@ -11,13 +11,13 @@
   text-indent: 0;
 }
 
-.hang {
-  margin-left: $def-ind;
-  text-indent: (-$def-ind);
-}
-
 .left {
   text-align: left !important;
+}
+
+.hang {
+  margin-left: $def-ind;
+  text-indent: $def-neg-ind;
 }
 
 .noind {
