--- a/src/includes/tachyons/_colors.scss
+++ b/src/includes/tachyons/_colors.scss
@@ -66,6 +66,7 @@ $washed-blue:  #f6fffe !default;
 $washed-green:  #e8fdf5 !default;
 $washed-yellow:  #fffceb !default;
 $washed-red:  #ffdfdf !default;
+$brownish: #332400 !default;
 
 
 // Custom Media Query Variables
