--- a/src/includes/tachyons/_line-height.scss
+++ b/src/includes/tachyons/_line-height.scss
@@ -17,25 +17,25 @@
 
 */
 
-  .lh-solid { line-height: 1; }
-  .lh-title { line-height: 1.25; }
-  .lh-copy  { line-height: 1.5; }
+  .lh-solid { line-height: $lh-solid; }
+  .lh-title { line-height: $lh-title; }
+  .lh-copy  { line-height: $lh-copy; }
 
 @media #{$breakpoint-not-small} {
-  .lh-solid-ns { line-height: 1; }
-  .lh-title-ns { line-height: 1.25; }
-  .lh-copy-ns  { line-height: 1.5; }
+  .lh-solid-ns { line-height: $lh-solid; }
+  .lh-title-ns { line-height: $lh-title; }
+  .lh-copy-ns  { line-height: $lh-copy; }
 }
 
 @media #{$breakpoint-medium} {
-  .lh-solid-m { line-height: 1; }
-  .lh-title-m { line-height: 1.25; }
-  .lh-copy-m  { line-height: 1.5; }
+  .lh-solid-m { line-height: $lh-solid; }
+  .lh-title-m { line-height: $lh-title; }
+  .lh-copy-m  { line-height: $lh-copy; }
 }
 
 @media #{$breakpoint-large} {
-  .lh-solid-l { line-height: 1; }
-  .lh-title-l { line-height: 1.25; }
-  .lh-copy-l  { line-height: 1.5; }
+  .lh-solid-l { line-height: $lh-solid; }
+  .lh-title-l { line-height: $lh-title; }
+  .lh-copy-l  { line-height: $lh-copy; }
 }
 
