--- a/src/includes/tachyons/_max-widths.scss
+++ b/src/includes/tachyons/_max-widths.scss
@@ -38,7 +38,27 @@
 
 /* Max Width Percentages */
 
-.mw-100  { max-width: 100%; }
+.mw-10 {  max-width:  10%; }
+.mw-20 {  max-width:  20%; }
+.mw-25 {  max-width:  25%; }
+.mw-30 {  max-width:  30%; }
+.mw-33 {  max-width:  33%; }
+.mw-34 {  max-width:  34%; }
+.mw-40 {  max-width:  40%; }
+.mw-50 {  max-width:  50%; }
+.mw-60 {  max-width:  60%; }
+.mw-70 {  max-width:  70%; }
+.mw-75 {  max-width:  75%; }
+.mw-80 {  max-width:  80%; }
+.mw-90 {  max-width:  90%; }
+.mw-100 { max-width: 100%; }
+
+.mw-third { max-width: (100% / 3); }
+.mw-two-thirds { max-width: (100% / 1.5); }
+.mw-auto { max-width: auto; }
+.mw-init { max-width: initial; }
+.mw-555 { max-width: 555px; }
+
 
 /* Max Width Scale */
 
@@ -57,7 +77,25 @@
 .mw-none { max-width: none; }
 
 @media #{$breakpoint-not-small} {
-  .mw-100-ns  { max-width: 100%; }
+  .mw-10-ns {  max-width:  10%; }
+  .mw-20-ns {  max-width:  20%; }
+  .mw-25-ns {  max-width:  25%; }
+  .mw-30-ns {  max-width:  30%; }
+  .mw-33-ns {  max-width:  33%; }
+  .mw-34-ns {  max-width:  34%; }
+  .mw-40-ns {  max-width:  40%; }
+  .mw-50-ns {  max-width:  50%; }
+  .mw-60-ns {  max-width:  60%; }
+  .mw-70-ns {  max-width:  70%; }
+  .mw-75-ns {  max-width:  75%; }
+  .mw-80-ns {  max-width:  80%; }
+  .mw-90-ns {  max-width:  90%; }
+  .mw-100-ns { max-width: 100%; }
+
+  .mw-third-ns { max-width: (100% / 3); }
+  .mw-two-thirds-ns { max-width: (100% / 1.5); }
+  .mw-auto-ns { max-width: auto; }
+  .mw-init-ns { max-width: initial; }
 
   .mw1-ns  {  max-width: 1rem; }
   .mw2-ns  {  max-width: 2rem; }
@@ -73,7 +111,25 @@
 }
 
 @media #{$breakpoint-medium} {
-  .mw-100-m  { max-width: 100%; }
+  .mw-10-m {  max-width:  10%; }
+  .mw-20-m {  max-width:  20%; }
+  .mw-25-m {  max-width:  25%; }
+  .mw-30-m {  max-width:  30%; }
+  .mw-33-m {  max-width:  33%; }
+  .mw-34-m {  max-width:  34%; }
+  .mw-40-m {  max-width:  40%; }
+  .mw-50-m {  max-width:  50%; }
+  .mw-60-m {  max-width:  60%; }
+  .mw-70-m {  max-width:  70%; }
+  .mw-75-m {  max-width:  75%; }
+  .mw-80-m {  max-width:  80%; }
+  .mw-90-m {  max-width:  90%; }
+  .mw-100-m { max-width: 100%; }
+
+  .mw-third-m { max-width: (100% / 3); }
+  .mw-two-thirds-m { max-width: (100% / 1.5); }
+  .mw-auto-m { max-width: auto; }
+  .mw-init-m { max-width: initial; }
 
   .mw1-m  {  max-width: 1rem; }
   .mw2-m  {  max-width: 2rem; }
@@ -89,7 +145,25 @@
 }
 
 @media #{$breakpoint-large} {
-  .mw-100-l  { max-width: 100%; }
+  .mw-10-l {  max-width:  10%; }
+  .mw-20-l {  max-width:  20%; }
+  .mw-25-l {  max-width:  25%; }
+  .mw-30-l {  max-width:  30%; }
+  .mw-33-l {  max-width:  33%; }
+  .mw-34-l {  max-width:  34%; }
+  .mw-40-l {  max-width:  40%; }
+  .mw-50-l {  max-width:  50%; }
+  .mw-60-l {  max-width:  60%; }
+  .mw-70-l {  max-width:  70%; }
+  .mw-75-l {  max-width:  75%; }
+  .mw-80-l {  max-width:  80%; }
+  .mw-90-l {  max-width:  90%; }
+  .mw-100-l { max-width: 100%; }
+
+  .mw-third-l { max-width: (100% / 3); }
+  .mw-two-thirds-l { max-width: (100% / 1.5); }
+  .mw-auto-l { max-width: auto; }
+  .mw-init-l { max-width: initial; }
 
   .mw1-l  {  max-width: 1rem; }
   .mw2-l  {  max-width: 2rem; }
