--- a/src/includes/tachyons/_media-queries.scss
+++ b/src/includes/tachyons/_media-queries.scss
@@ -4,9 +4,9 @@
 
 // Custom Media Query Variables
 
-$breakpoint-not-small: 'screen and (min-width: 30em)' !default;
-$breakpoint-medium: 'screen and (min-width: 30em) and (max-width: 60em)' !default;
-$breakpoint-large: 'screen and (min-width: 60em)' !default;
+$breakpoint-not-small: "screen and (min-width: 30em)" !default;
+$breakpoint-medium: "screen and (min-width: 30em) and (max-width: 60em)" !default;
+$breakpoint-large: "screen and (min-width: 60em)" !default;
 
 /*
 
