--- a/src/includes/mywsb/_nav.scss
+++ b/src/includes/mywsb/_nav.scss
@@ -1,20 +1,10 @@
 nav {
   ol {
     list-style-type: none;
-    margin-bottom: 0.3em;
+    margin-bottom: $spacing-small;
 
     > li:first-child {
-      margin-top: 0.3em;
+      margin-top: $spacing-small;
     }
-  }
-
-  &[epub|type~=toc] > ol > li > ol > li,
-  &[epub\:type~=toc] > ol > li > ol > li {
-    margin-top: 0.3em;
-  }
-
-  &[epub|type~="page-list"],
-  &[epub\:type~="page-list"] {
-    display: none;
   }
 }
