--- a/src/includes/tachyons/_display.scss
+++ b/src/includes/tachyons/_display.scss
@@ -31,7 +31,7 @@
 
 */
 
-.dn {              display: none; }
+.dn, .nd {         display: none; }
 .di {              display: inline; }
 .db {              display: block; }
 .dib {             display: inline-block; }
