--- a/src/includes/tachyons/_text-decoration.scss
+++ b/src/includes/tachyons/_text-decoration.scss
@@ -19,24 +19,28 @@
 */
 
 .strike       { text-decoration: line-through; }
+.overline     { text-decoration: overline; }
 .underline    { text-decoration: underline; }
 .no-underline { text-decoration: none; }
 
 
 @media #{$breakpoint-not-small} {
   .strike-ns       { text-decoration: line-through; }
+  .overline-ns     { text-decoration: overline; }
   .underline-ns    { text-decoration: underline; }
   .no-underline-ns { text-decoration: none; }
 }
 
 @media #{$breakpoint-medium} {
   .strike-m       { text-decoration: line-through; }
+  .overline-m     { text-decoration: overline; }
   .underline-m    { text-decoration: underline; }
   .no-underline-m { text-decoration: none; }
 }
 
 @media #{$breakpoint-large} {
   .strike-l       { text-decoration: line-through; }
-  .underline-l {    text-decoration: underline; }
+  .overline-l     { text-decoration: overline; }
+  .underline-l    { text-decoration: underline; }
   .no-underline-l { text-decoration: none; }
 }
