--- a/src/includes/tachyons/_type-scale.scss
+++ b/src/includes/tachyons/_type-scale.scss
@@ -47,26 +47,26 @@
 
 /* Type Scale */
 
-.f1 { font-size: 3rem; }
-.f2 { font-size: 2.25rem; }
-.f3 { font-size: 1.5rem; }
-.f4 { font-size: 1.25rem; }
-.f5 { font-size: 1rem; }
-.f6 { font-size: .875rem; }
-.f7 { font-size: .75rem; } /* Small and hard to read for many people so use with extreme caution */
+.f1 { font-size: $type-scale-1; }
+.f2 { font-size: $type-scale-2; }
+.f3 { font-size: $type-scale-3; }
+.f4 { font-size: $type-scale-4; }
+.f5 { font-size: $type-scale-5; }
+.f6 { font-size: $type-scale-6; }
+.f7 { font-size: $type-scale-7; } /* Small and hard to read for many people so use with extreme caution */
 
 @media #{$breakpoint-not-small}{
   .f-6-ns,
   .f-headline-ns { font-size: 6rem; }
   .f-5-ns,
   .f-subheadline-ns { font-size: 5rem; }
-  .f1-ns { font-size: 3rem; }
-  .f2-ns { font-size: 2.25rem; }
-  .f3-ns { font-size: 1.5rem; }
-  .f4-ns { font-size: 1.25rem; }
-  .f5-ns { font-size: 1rem; }
-  .f6-ns { font-size: .875rem; }
-  .f7-ns { font-size: .75rem; }
+  .f1-ns { font-size: $type-scale-1; }
+  .f2-ns { font-size: $type-scale-2; }
+  .f3-ns { font-size: $type-scale-3; }
+  .f4-ns { font-size: $type-scale-4; }
+  .f5-ns { font-size: $type-scale-5; }
+  .f6-ns { font-size: $type-scale-6; }
+  .f7-ns { font-size: $type-scale-7; }
 }
 
 @media #{$breakpoint-medium} {
@@ -74,13 +74,13 @@
   .f-headline-m { font-size: 6rem; }
   .f-5-m,
   .f-subheadline-m { font-size: 5rem; }
-  .f1-m { font-size: 3rem; }
-  .f2-m { font-size: 2.25rem; }
-  .f3-m { font-size: 1.5rem; }
-  .f4-m { font-size: 1.25rem; }
-  .f5-m { font-size: 1rem; }
-  .f6-m { font-size: .875rem; }
-  .f7-m { font-size: .75rem; }
+  .f1-m { font-size: $type-scale-1; }
+  .f2-m { font-size: $type-scale-2; }
+  .f3-m { font-size: $type-scale-3; }
+  .f4-m { font-size: $type-scale-4; }
+  .f5-m { font-size: $type-scale-5; }
+  .f6-m { font-size: $type-scale-6; }
+  .f7-m { font-size: $type-scale-7; }
 }
 
 @media #{$breakpoint-large} {
@@ -92,11 +92,11 @@
   .f-subheadline-l {
     font-size: 5rem;
   }
-  .f1-l { font-size: 3rem; }
-  .f2-l { font-size: 2.25rem; }
-  .f3-l { font-size: 1.5rem; }
-  .f4-l { font-size: 1.25rem; }
-  .f5-l { font-size: 1rem; }
-  .f6-l { font-size: .875rem; }
-  .f7-l { font-size: .75rem; }
+  .f1-l { font-size: $type-scale-1; }
+  .f2-l { font-size: $type-scale-2; }
+  .f3-l { font-size: $type-scale-3; }
+  .f4-l { font-size: $type-scale-4; }
+  .f5-l { font-size: $type-scale-5; }
+  .f6-l { font-size: $type-scale-6; }
+  .f7-l { font-size: $type-scale-7; }
 }
