--- a/src/includes/tachyons/_widths.scss
+++ b/src/includes/tachyons/_widths.scss
@@ -49,11 +49,11 @@
 
 /* Width Scale */
 
-.w1 {    width: 1rem; }
-.w2 {    width: 2rem; }
-.w3 {    width: 4rem; }
-.w4 {    width: 8rem; }
-.w5 {    width: 16rem; }
+.w1 {    width: $spacing-medium; }
+.w2 {    width: $spacing-large; }
+.w3 {    width: $spacing-extra-large; }
+.w4 {    width: $spacing-extra-extra-large; }
+.w5 {    width: $spacing-extra-extra-extra-large; }
 
 .w-10 {  width:  10%; }
 .w-20 {  width:  20%; }
@@ -73,13 +73,14 @@
 .w-third { width: (100% / 3); }
 .w-two-thirds { width: (100% / 1.5); }
 .w-auto { width: auto; }
+.w-init { width: initial; }
 
 @media #{$breakpoint-not-small} {
-  .w1-ns {  width: 1rem; }
-  .w2-ns {  width: 2rem; }
-  .w3-ns {  width: 4rem; }
-  .w4-ns {  width: 8rem; }
-  .w5-ns {  width: 16rem; }
+  .w1-ns {  width: $spacing-medium; }
+  .w2-ns {  width: $spacing-large; }
+  .w3-ns {  width: $spacing-extra-large; }
+  .w4-ns {  width: $spacing-extra-extra-large; }
+  .w5-ns {  width: $spacing-extra-extra-extra-large; }
   .w-10-ns { width:  10%; }
   .w-20-ns { width:  20%; }
   .w-25-ns { width:  25%; }
@@ -97,14 +98,15 @@
   .w-third-ns { width: (100% / 3); }
   .w-two-thirds-ns { width: (100% / 1.5); }
   .w-auto-ns { width: auto; }
+  .w-init-ns { width: initial; }
 }
 
 @media #{$breakpoint-medium} {
-  .w1-m {      width: 1rem; }
-  .w2-m {      width: 2rem; }
-  .w3-m {      width: 4rem; }
-  .w4-m {      width: 8rem; }
-  .w5-m {      width: 16rem; }
+  .w1-m {      width: $spacing-medium; }
+  .w2-m {      width: $spacing-large; }
+  .w3-m {      width: $spacing-extra-large; }
+  .w4-m {      width: $spacing-extra-extra-large; }
+  .w5-m {      width: $spacing-extra-extra-extra-large; }
   .w-10-m { width:  10%; }
   .w-20-m { width:  20%; }
   .w-25-m { width:  25%; }
@@ -122,14 +124,15 @@
   .w-third-m { width: (100% / 3); }
   .w-two-thirds-m { width: (100% / 1.5); }
   .w-auto-m {    width: auto; }
+  .w-init-m { width: initial; }
 }
 
 @media #{$breakpoint-large} {
-  .w1-l {      width: 1rem; }
-  .w2-l {      width: 2rem; }
-  .w3-l {      width: 4rem; }
-  .w4-l {      width: 8rem; }
-  .w5-l {      width: 16rem; }
+  .w1-l {      width: $spacing-medium; }
+  .w2-l {      width: $spacing-large; }
+  .w3-l {      width: $spacing-extra-large; }
+  .w4-l {      width: $spacing-extra-extra-large; }
+  .w5-l {      width: $spacing-extra-extra-extra-large; }
   .w-10-l {    width:  10%; }
   .w-20-l {    width:  20%; }
   .w-25-l {    width:  25%; }
@@ -147,4 +150,5 @@
   .w-third-l { width: (100% / 3); }
   .w-two-thirds-l { width: (100% / 1.5); }
   .w-auto-l {    width: auto; }
+  .w-init-l { width: initial; }
 }
